add config, but not working without springboot

--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,5 +1,2 @@
-server.port=8081
-
-botConfig.token=
-botConfig.url=
-botConfig.name=
+botConfig.token=7913699608:AAEGoIGaDngGbDx9bSTmFWK3LG9Y1tb4Pnk
+botConfig.name=MovieRecommendationJava_bot
