--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,18 @@
             <version>3.3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
